# consorcio-autogestionado-back

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.local.yml  docker-compose.remote.yml  pyproject.toml
src/: main.py
src/core/: config.py  dependencies.py  exceptions.py  logger.py  security.py
src/database/: db.py  migrate.py  supabase_client.py
src/models/: expense.py  group.py  payment.py  pozo.py  user.py
src/repositories/: expense_repository.py  group_repository.py  payment_repository.py  pozo_repository.py  user_repository.py
src/routers/: auth.py  groups.py  health.py  payments.py  pozo.py  users.py
src/schemas/: expense.py  group.py  payment.py  pozo.py  user.py
src/services/: auth_service.py  expense_service.py  group_service.py  receipt_service.py  user_service.py
supabase/migrations/: 20260418000000_create_users.sql  20260418000001_create_groups.sql  20260418000002_create_expenses.sql  20260423000000_update_expenses.sql  20260424000000_add_m2_to_members.sql  20260424000001_add_invite_code.sql  20260424000003_add_receipt_to_expenses.sql  20260426000000_create_owner_payments.sql  20260503000000_create_pozo.sql  20260504000000_add_contribution_debts.sql  20260606000000_add_recovery_code_and_balance_adjustments.sql
